# RL_FT

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml
configs/env/: pick_place.yaml
configs/model/: dppo.yaml
configs/robot/: unitree_g1.yaml
configs/scene/: empty_room.yaml  randomization.yaml
envs/: __init__.py  base_env.py  move.py  pick_and_place.py  pick_and_place_dppo.py  rolling_ball.py
models/architecture/: Policy_Network.py  critic.py
models/trainers/: train_ppo_diffusion_agent.py
models/utils/: modules.py  reward_scaling.py  scheduler.py  timer.py
models/utils/gym_utils/: __init__.py  async_vector_env.py  sync_vector_env.py  vector_env.py
resources/custom/: barriers.xml  custom_g1.xml  custom_scene.xml  joint_indices.txt  lights.xml  object.xml  table.xml  target.xml
resources/robots/unitree_g1/: scene_with_cam.xml
resources/scenes/: barriers.xml  g1.xml  lights.xml  object.xml  rollingBall.xml  scene.xml  table.xml
scripts/: SAC_inference.py  move_example.py  record_video.py  train.py  train_REINFORCE.py  train_SAC.py  train_dppo.py  train_pick_and_place_SAC.py  validate_pap_env.py
