[project]
name = "RL_FT"
version = "0.0.0"
description = "Policy Fine-Tuning and Distillation of Pre-Trained Diffusion Models for High-Frequency Robot Control"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "gymnasium~=1.2.3",
    "hydra-core~=1.3.2",
    "mujoco~=3.6.0",
    "numpy~=2.4.3",
    "scipy~=1.17.1",
    "torch~=2.10.0",
    "wandb~=0.25.1",
    "ImageIO~=2.37.3",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["envs*"]